<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="Search Movie"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />
</menu>
